Bug 388723: Make the browser wrap comments on display in addition to the normal wrapping, to support CJK languages that have no spaces. Patch By Max Kanat-Alexander <mkanat@bugzilla.org> r=himorin, r=glob

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -243,6 +243,22 @@ div#docslinks {
     margin-bottom: 2em;
 }
 
+/* The rules for these classes make international text wrap correctly,
+   even for languages like Japanese that have no spaces. */
+.bz_comment_text, .uneditable_textarea {
+     font-family: monospace;
+    /* Note that these must all be on separate lines or they stop
+       working in Konqueror. */
+     white-space: pre-wrap;      /* CSS 3 & 2.1 */
+     white-space: -moz-pre-wrap; /* Gecko */
+     white-space: -pre-wrap;     /* Opera 4-6 */
+     white-space: -o-pre-wrap;   /* Opera 7 */
+}
+
+.bz_comment_text {
+     width: 50em;
+}
+
 .bz_first_comment {
 }
 
@@ -257,6 +273,8 @@ div#docslinks {
 
 span.quote {
     color: #65379c;
+    /* Make quoted text not wrap. */
+    white-space: pre;
 }
 
 table#flags th,
@@ -318,8 +336,7 @@ dl dl > dt {
 
 /* For bug fields */
 .uneditable_textarea {
-    white-space: pre;
-    font-family: monospace;
+    width: 30em;
 }
 
 div.user_match {
